--- a/University-Api/appsettings.json
+++ b/University-Api/appsettings.json
@@ -1,10 +1,16 @@
 {
+  "AppSettings": {
+    "Token": "my top secret key",
+    "MSS": "Server=L; Database=UniversityDb;Trusted_Connection=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+ 
   "AllowedHosts": "*",
   "Kestrel": {
     "EndpointDefaults": {
