--- a/University-Api/UniversityApi.csproj
+++ b/University-Api/UniversityApi.csproj
@@ -17,6 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.14" />
@@ -25,7 +27,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="EventBus">
+      <HintPath>..\..\RabbitMqCustomLib\RabbitMqCustomLib\bin\Debug\net6.0\EventBus.dll</HintPath>
+    </Reference>
+    <Reference Include="RabbitMqCustomLib">
+      <HintPath>..\..\RabbitMqCustomLib\RabbitMqCustomLib\bin\Debug\net6.0\RabbitMqCustomLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
