--- a/University-Api/appsettings.json
+++ b/University-Api/appsettings.json
@@ -1,7 +1,12 @@
 {
   "AppSettings": {
     "Token": "my top secret key",
-    "MSS": "Server=L; Database=UniversityDb;Trusted_Connection=True;"
+    "MSS": "Server=L; Database=UniversityDb;Trusted_Connection=True;",
+    "EventBusPassword": "guest",
+    "EventBusUserName": "guest",
+    "EventBusConnection": "localhost",
+    "SubscriptionClientName": "testappQueue",
+    "EventBusRetryCount": 6
 
   },
   "Logging": {
