--- a/University-Api/appsettings.json
+++ b/University-Api/appsettings.json
@@ -5,7 +5,7 @@
     "EventBusPassword": "guest",
     "EventBusUserName": "guest",
     "EventBusConnection": "localhost",
-    "SubscriptionClientName": "testappQueue",
+    "SubscriptionClientName": "testappQueue3",
     "EventBusRetryCount": 6
 
   },
