--- a/University-Api/appsettings.json
+++ b/University-Api/appsettings.json
@@ -6,7 +6,9 @@
     "EventBusUserName": "guest",
     "EventBusConnection": "localhost",
     "SubscriptionClientName": "testappQueue3",
-    "EventBusRetryCount": 6
+    "EventBusRetryCount": 6,
+    "SecretKeyCrypto": "312412"
+
 
   },
   "Logging": {
