--- a/University-Api/appsettings.json
+++ b/University-Api/appsettings.json
@@ -1,5 +1,10 @@
 {
   "AppSettings": {
+    "AppName": "AppName",
+    "Grpc": {
+      "UniversityApi": "https://localhost:7019",
+      "TeacherApi": "https://localhost:7057"
+    },
     "Token": "my top secret key",
     "MSS": "Server=L; Database=UniversityDb;Trusted_Connection=True;",
     "EventBusPassword": "guest",
@@ -18,6 +23,6 @@
     }
   },
  
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
   
 }
