--- a/University-Api/UniversityApi.csproj
+++ b/University-Api/UniversityApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="Protos\dean.proto" />
+    <None Remove="Protos\student.proto" />
     <None Remove="Protos\teacher.proto" />
     <None Remove="Protos\university.proto" />
   </ItemGroup>
@@ -16,6 +17,9 @@
 	  <Protobuf Include="Protos\dean.proto" ProtoCompile="True" GrpcServices="Server">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 
+	  </Protobuf>
+	  <Protobuf Include="Protos\student.proto" GrpcServices="Server" ProtoCompile="True" >
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Protobuf>
 	  <Protobuf Include="Protos\teacher.proto" GrpcServices="Client" />
     <Protobuf Include="Protos\university.proto" ProtoCompile="True" GrpcServices="Server">
